syntax = "proto3";
import "messages.proto";

package centurion;

service TaskService {
  rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse);
  rpc GetBucketById(CreateBucketRequest) returns (GetBucketByIdResponse);
  rpc GetBuckets(GetBucketsRequest) returns (GetBucketsResponse);
}

message CreateBucketRequest {
  string name = 1;
}

message CreateBucketResponse {
  TaskBucket bucket = 1;
}

message GetBucketByIdRequest {
  string id = 1;
}

message GetBucketByIdResponse {
  TaskBucket bucket = 1;
}

message GetBucketsRequest {}
message GetBucketsResponse {
  repeated TaskBucket buckets = 1;
}
